--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,7 @@ dmypy.json
 
 # Program run temp file
 runs/
+*.png
 
 # Custom dataset dir
 data/masked
@@ -139,7 +140,7 @@ data/masked.yaml
 
 
 # Custom model file
-config/masked/
+configs/masked/
 
 *.pth
 
