--- a/configs/PascalVOC-Detection/yolov5l.yaml
+++ b/configs/PascalVOC-Detection/yolov5l.yaml
@@ -1,5 +1,5 @@
 # parameters
-classes: 20  # number of classes
+num_classes: 20  # number of classes
 depth_multiple: 1.0  # model depth multiple
 width_multiple: 1.0  # layer channel multiple
 
@@ -28,19 +28,19 @@ backbone:
 # na = len(anchors[0])
 head:
   [[-1, 3, BottleneckCSP, [1024, False]],  # 11
-   [-1, 1, nn.Conv2d, [na * (nc + 5), 1, 1]],  # 12 (P5/32-large)
+   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 12 (P5/32-large)
 
    [-2, 1, nn.Upsample, [None, 2, 'nearest']],
    [[-1, 6], 1, Concat, [1]],  # cat backbone P4
    [-1, 1, Conv, [512, 1, 1]],
    [-1, 3, BottleneckCSP, [512, False]],
-   [-1, 1, nn.Conv2d, [na * (nc + 5), 1, 1]],  # 17 (P4/16-medium)
+   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 17 (P4/16-medium)
 
    [-2, 1, nn.Upsample, [None, 2, 'nearest']],
    [[-1, 4], 1, Concat, [1]],  # cat backbone P3
    [-1, 1, Conv, [256, 1, 1]],
    [-1, 3, BottleneckCSP, [256, False]],
-   [-1, 1, nn.Conv2d, [na * (nc + 5), 1, 1]],  # 22 (P3/8-small)
+   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 22 (P3/8-small)
 
-   [[], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
+   [[], 1, Detect, [num_classes, anchors]],  # Detect(P3, P4, P5)
   ]
