--- a/configs/PascalVOC-Detection/yolov3-spp.yaml
+++ b/configs/PascalVOC-Detection/yolov3-spp.yaml
@@ -26,29 +26,23 @@ backbone:
   ]
 
 # yolov3-spp head
-# na = len(anchors[0])
 head:
   [[-1, 1, Bottleneck, [1024, False]],  # 11
+   [-1, 1, Conv, [512, 1, 1]]
    [-1, 1, SPP, [512, [5, 9, 13]]],
-   [-1, 1, Conv, [1024, 3, 1]],
-   [-1, 1, Conv, [512, 1, 1]],
-   [-1, 1, Conv, [1024, 3, 1]],
+   [-1, 2, Bottleneck, [1024, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 16 (P5/32-large)
 
    [-3, 1, Conv, [256, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
-   [[-1, 8], 1, Concat, [1]],  # cat backbone P4
-   [-1, 1, Bottleneck, [512, False]],
-   [-1, 1, Bottleneck, [512, False]],
-   [-1, 1, Conv, [256, 1, 1]],
-   [-1, 1, Conv, [512, 3, 1]],
+   [[-1, 8], 1, Concat, [1]],  # concat backbone P4
+   [-1, 3, Bottleneck, [512, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 24 (P4/16-medium)
 
    [-3, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
-   [[-1, 6], 1, Concat, [1]],  # cat backbone P3
-   [-1, 1, Bottleneck, [256, False]],
-   [-1, 2, Bottleneck, [256, False]],
+   [[-1, 6], 1, Concat, [1]],  # concat backbone P3
+   [-1, 3, Bottleneck, [256, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 30 (P3/8-small)
 
    [[], 1, Detect, [num_classes, anchors]],   # Detect(P3, P4, P5)
