--- a/configs/COCO-Detection/yolov3.yaml
+++ b/configs/COCO-Detection/yolov3.yaml
@@ -25,28 +25,24 @@ backbone:
    [-1, 4, Bottleneck, [1024]],  # 10
   ]
 
-# yolov3 head
+# YOLOv3 head
 head:
-  [[-1, 1, Bottleneck, [1024, False]],  # 11
-   [-1, 1, Bottleneck, [1024, False]],
-   [-1, 1, Bottleneck, [1024, False]],
-   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 14 (P5/32-large)
+  [[-1, 3, Bottleneck, [1024, False]],  # 11
+   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 12 (P5/32-large)
 
    [-3, 1, Conv, [256, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 8], 1, Concat, [1]],  # cat backbone P4
    [-1, 1, Bottleneck, [512, False]],
-   [-1, 1, Bottleneck, [512, False]],
-   [-1, 1, Bottleneck, [512, False]],
-   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 21 (P4/16-medium)
+   [-1, 2, Bottleneck, [512, False]],
+   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 18 (P4/16-medium)
 
    [-3, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 6], 1, Concat, [1]],  # cat backbone P3
    [-1, 1, Bottleneck, [256, False]],
-   [-1, 1, Bottleneck, [256, False]],
-   [-1, 1, Bottleneck, [256, False]],
-   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 28 (P3/8-small)
+   [-1, 2, Bottleneck, [256, False]],
+   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 24 (P3/8-small)
 
    [[], 1, Detect, [num_classes, anchors]],   # Detect(P3, P4, P5)
   ]
