--- a/configs/PascalVOC-Detection/yolov3-spp.yaml
+++ b/configs/PascalVOC-Detection/yolov3-spp.yaml
@@ -30,7 +30,7 @@ head:
   [[-1, 1, Bottleneck, [1024, False]],  # 11
    [-1, 1, Conv, [512, 1, 1]],
    [-1, 1, SPP, [512, [5, 9, 13]]],
-   [-1, 1, Conv, [1024, 3, 1]],
+   [-1, 1, Bottleneck, [1024, False]],
    [-1, 1, Bottleneck, [1024, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 16 (P5/32-large)
 
