--- a/configs/PascalVOC-Detection/yolov3.yaml
+++ b/configs/PascalVOC-Detection/yolov3.yaml
@@ -32,14 +32,14 @@ head:
 
    [-3, 1, Conv, [256, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
-   [[-1, 8], 1, Concat, [1]],  # cat backbone P4
+   [[-1, 8], 1, Concat, [1]],  # concat backbone P4
    [-1, 1, Bottleneck, [512, False]],
    [-1, 2, Bottleneck, [512, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 18 (P4/16-medium)
 
    [-3, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
-   [[-1, 6], 1, Concat, [1]],  # cat backbone P3
+   [[-1, 6], 1, Concat, [1]],  # concat backbone P3
    [-1, 1, Bottleneck, [256, False]],
    [-1, 2, Bottleneck, [256, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 24 (P3/8-small)
