--- a/configs/PascalVOC-Detection/yolov4.yaml
+++ b/configs/PascalVOC-Detection/yolov4.yaml
@@ -1,5 +1,5 @@
 # parameters
-num_classes: 80  # number of classes
+num_classes: 20  # number of classes
 depth_multiple: 1.0  # model depth multiple
 width_multiple: 1.0  # layer channel multiple
 
@@ -9,25 +9,29 @@ anchors:
   - [30,61, 62,45, 59,119]  # P4/16
   - [116,90, 156,198, 373,326]  # P5/32
 
-# Darknet-53 backbone
+# CSPDarknet-53 backbone
 backbone:
   # [from, number, module, args]
   [[-1, 1, Conv, [32, 3, 1]],  # 0
    [-1, 1, Conv, [64, 3, 2]],  # 1-P1/2
-   [-1, 1, Bottleneck, [64]],
+   [-1, 1, BottleneckCSP, [64]],
    [-1, 1, Conv, [128, 3, 2]],  # 3-P2/4
-   [-1, 2, Bottleneck, [128]],
+   [-1, 2, BottleneckCSP, [128]],
    [-1, 1, Conv, [256, 3, 2]],  # 5-P3/8
-   [-1, 8, Bottleneck, [256]],
+   [-1, 8, BottleneckCSP, [256]],
    [-1, 1, Conv, [512, 3, 2]],  # 7-P4/16
-   [-1, 8, Bottleneck, [512]],
+   [-1, 8, BottleneckCSP, [512]],
    [-1, 1, Conv, [1024, 3, 2]], # 9-P5/32
-   [-1, 4, Bottleneck, [1024]],  # 10
+   [-1, 4, BottleneckCSP, [1024]],  # 10
   ]
 
 # YOLOv3 head
 head:
-  [[-1, 3, Bottleneck, [1024, False]],  # 11
+  [[-1, 1, Bottleneck, [1024, False]],  # 11
+   [-1, 1, Conv, [512, 1, 1]],
+   [-1, 1, SPP, [512, [5, 9, 13]]],
+   [-1, 1, Bottleneck, [1024, False]],
+   [-1, 1, Bottleneck, [1024, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 12 (P5/32-large)
 
    [-3, 1, Conv, [256, 1, 1]],
