--- a/configs/PascalVOC-Detection/yolov5-xlarge.yaml
+++ b/configs/PascalVOC-Detection/yolov5-xlarge.yaml
@@ -1,7 +1,7 @@
 # parameters
 num_classes: 20  # number of classes
-depth_multiple: 0.67  # model depth multiple
-width_multiple: 0.75  # layer channel multiple
+depth_multiple: 1.33  # model depth multiple
+width_multiple: 1.25  # layer channel multiple
 
 # anchors
 anchors:
@@ -9,7 +9,7 @@ anchors:
   - [30,61, 62,45, 59,119]  # P4/16
   - [116,90, 156,198, 373,326]  # P5/32
 
-# yolov5 backbone
+# CSPDarknet53-PANet-SPP backbone
 backbone:
   # [from, number, module, args]
   [[-1, 1, Focus, [64, 3]],  # 1-P1/2
@@ -24,20 +24,19 @@ backbone:
    [-1, 6, BottleneckCSP, [1024]],  # 10
   ]
 
-# yolov5m head
-# na = len(anchors[0])
+# YOLOv5 head
 head:
   [[-1, 3, BottleneckCSP, [1024, False]],  # 11
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 12 (P5/32-large)
 
-   [-2, 1, nn.Upsample, [None, 2, 'nearest']],
-   [[-1, 6], 1, Concat, [1]],  # cat backbone P4
+   [-2, 1, nn.Upsample, [None, 2, "nearest"]],
+   [[-1, 6], 1, Concat, [1]],  # concat backbone P4
    [-1, 1, Conv, [512, 1, 1]],
    [-1, 3, BottleneckCSP, [512, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 17 (P4/16-medium)
 
-   [-2, 1, nn.Upsample, [None, 2, 'nearest']],
-   [[-1, 4], 1, Concat, [1]],  # cat backbone P3
+   [-2, 1, nn.Upsample, [None, 2, "nearest"]],
+   [[-1, 4], 1, Concat, [1]],  # concat backbone P3
    [-1, 1, Conv, [256, 1, 1]],
    [-1, 3, BottleneckCSP, [256, False]],
    [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 22 (P3/8-small)
