--- a/configs/COCO-Detection/yolov5-large.yaml
+++ b/configs/COCO-Detection/yolov5-large.yaml
@@ -1,5 +1,5 @@
 # parameters
-num_classes: 80  # number of classes
+nc: 80  # number of classes
 depth_multiple: 1.0  # model depth multiple
 width_multiple: 1.0  # layer channel multiple
 
@@ -19,7 +19,7 @@ backbone:
    [-1, 9, BottleneckCSP, [256]],
    [-1, 1, Conv, [512, 3, 2]],  # 5-P4/16
    [-1, 9, BottleneckCSP, [512]],
-   [-1, 1, Conv, [1024, 3, 2]], # 7-P5/32
+   [-1, 1, Conv, [1024, 3, 2]],  # 7-P5/32
    [-1, 1, SPP, [1024, [5, 9, 13]]],
    [-1, 3, BottleneckCSP, [1024, False]],  # 9
   ]
@@ -44,5 +44,5 @@ head:
    [[-1, 10], 1, Concat, [1]],  # concat head P5
    [-1, 3, BottleneckCSP, [1024, False]],  # 23
 
-   [[17, 20, 23], 1, Detect, [num_classes, anchors]],  # Detect(P3, P4, P5)
+   [[17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
   ]
