--- a/configs/PascalVOC-Detection/yolov3-tiny.yaml
+++ b/configs/PascalVOC-Detection/yolov3-tiny.yaml
@@ -29,13 +29,13 @@ backbone:
 # YOLOv3-tiny head
 head:
   [[-1, 1, Bottleneck, [512, False]],  # 12
-   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 13 (P5/32-large)
+   [-1, 1, nn.Conv2d, [na * (nc + 5), 1, 1]],  # 13 (P5/32-large)
 
    [-2, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 8], 1, Concat, [1]],  # concat backbone P4
    [-1, 1, Conv, [256, 1, 1]],
-   [-1, 1, nn.Conv2d, [num_anchors * (num_classes + 5), 1, 1]],  # 18 (P4/16-medium)
+   [-1, 1, nn.Conv2d, [na * (nc + 5), 1, 1]],  # 18 (P4/16-medium)
 
-   [[], 1, Detect, [num_classes, anchors]],   # Detect(P4, P5)
+   [[], 1, Detect, [nc, anchors]],   # Detect(P4, P5)
   ]
