--- a/configs/COCO-Detection/yolov5-small.yaml
+++ b/configs/COCO-Detection/yolov5-small.yaml
@@ -1,5 +1,5 @@
 # parameters
-nc: 80  # number of classes
+number_classes: 80  # number of classes
 depth_multiple: 0.33  # model depth multiple
 width_multiple: 0.50  # layer channel multiple
 
@@ -44,5 +44,5 @@ head:
    [[-1, 10], 1, Concat, [1]],  # concat head P5
    [-1, 3, BottleneckCSP, [1024, False]],  # 23
 
-   [[17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
+   [[17, 20, 23], 1, Detect, [number_classes, anchors]],  # Detect(P3, P4, P5)
   ]
