--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Cython
 numpy~=1.18.5
 opencv-python~=4.3.0.36
 torch
-torchvision~=0.6.1
+torchvision
 onnx
 django
 djangorestframework
@@ -20,14 +20,7 @@ pycocotools~=2.0.1
 pathlib~=1.0.1
 yaml~=0.2.5
 setuptools~=49.2.0
-apex~=0.1
 
-# -------------------------------------------------------------- #
-#                          optional                              #
-# -------------------------------------------------------------- #
-
-# ---------- Nvidia Apex for mixed precision training ----------
-# git clone https://github.com/NVIDIA/apex && cd apex && pip install -v --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" . --user && cd .. && rm -rf apex
 
 # ------------------- Tensorboard ------------------------------
 # tb-nightly
